<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">
    <TableRow
        android:id="@+id/TableRow01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight=".25">
        <Button
            android:id="@+id/Button_Toast"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/toast"></Button>
        <Button
            android:id="@+id/Button_SimpleDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/basic"></Button>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight=".25">
        <Button
            android:id="@+id/Button_AlertDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/alert"></Button>
        <Button
            android:id="@+id/Button_ProgressDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/progress"></Button>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight=".25">
        <Button
            android:id="@+id/Button_DatePickerDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/date"></Button>
        <Button
            android:id="@+id/Button_TimePickerDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/time"></Button>
    </TableRow>
    <TableRow
        android:id="@+id/TableRow04"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight=".25">
        <Button
            android:id="@+id/Button_CharacterPickerDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/character"></Button>
        <Button
            android:id="@+id/Button_CustomDialog"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/custom"></Button>
    </TableRow>
</TableLayout>